-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.6.3, 6.7.0 RC
-
None
-
d3d420a7c (dev), 92e216b98 (6.7), 24171c984 (6.6)
When configuring the FX & Material Showroom example, the Qt build system warns about QTP0001:
[cmake] CMake Warning (dev) at C:/Qt/6.7.0/msvc2019_64/lib/cmake/Qt6Core/Qt6CoreMacros.cmake:3123 (message): [cmake] Qt policy QTP0001 is not set: ':/qt/qml/' is the default resource prefix [cmake] for QML modules. Check https://doc.qt.io/qt-6/qt-cmake-policy-qtp0001.html [cmake] for policy details. Use the qt_policy command to set the policy and [cmake] suppress this warning. [cmake] [cmake] Call Stack (most recent call first): [cmake] C:/Qt/6.7.0/msvc2019_64/lib/cmake/Qt6Qml/Qt6QmlMacros.cmake:468 (__qt_internal_setup_policy) [cmake] C:/Qt/6.7.0/msvc2019_64/lib/cmake/Qt6Qml/Qt6QmlMacros.cmake:775 (qt6_add_qml_module) [cmake] qmlmodules:1 (qt_add_qml_module) [cmake] CMakeLists.txt:36 (include) [cmake] This warning is for project developers. Use -Wno-dev to suppress it. [cmake] [cmake] CMake Warning (dev) at C:/Qt/6.7.0/msvc2019_64/lib/cmake/Qt6Core/Qt6CoreMacros.cmake:3123 (message): [cmake] Qt policy QTP0001 is not set: ':/qt/qml/' is the default resource prefix [cmake] for QML modules. Check https://doc.qt.io/qt-6/qt-cmake-policy-qtp0001.html [cmake] for policy details. Use the qt_policy command to set the policy and [cmake] suppress this warning. [cmake] [cmake] Call Stack (most recent call first): [cmake] C:/Qt/6.7.0/msvc2019_64/lib/cmake/Qt6Qml/Qt6QmlMacros.cmake:468 (__qt_internal_setup_policy) [cmake] C:/Qt/6.7.0/msvc2019_64/lib/cmake/Qt6Qml/Qt6QmlMacros.cmake:775 (qt6_add_qml_module) [cmake] content/CMakeLists.txt:3 (qt_add_qml_module) [cmake] This warning is for project developers. Use -Wno-dev to suppress it. [cmake] [cmake] CMake Warning (dev) at C:/Qt/6.7.0/msvc2019_64/lib/cmake/Qt6Core/Qt6CoreMacros.cmake:3123 (message): [cmake] Qt policy QTP0001 is not set: ':/qt/qml/' is the default resource prefix [cmake] for QML modules. Check https://doc.qt.io/qt-6/qt-cmake-policy-qtp0001.html [cmake] for policy details. Use the qt_policy command to set the policy and [cmake] suppress this warning. [cmake] [cmake] Call Stack (most recent call first): [cmake] C:/Qt/6.7.0/msvc2019_64/lib/cmake/Qt6Qml/Qt6QmlMacros.cmake:468 (__qt_internal_setup_policy) [cmake] C:/Qt/6.7.0/msvc2019_64/lib/cmake/Qt6Qml/Qt6QmlMacros.cmake:775 (qt6_add_qml_module) [cmake] imports/PocketDemo/CMakeLists.txt:7 (qt_add_qml_module) [cmake] This warning is for project developers. Use -Wno-dev to suppress it. [cmake] [cmake] CMake Warning (dev) at C:/Qt/6.7.0/msvc2019_64/lib/cmake/Qt6Core/Qt6CoreMacros.cmake:3123 (message): [cmake] Qt policy QTP0001 is not set: ':/qt/qml/' is the default resource prefix [cmake] for QML modules. Check https://doc.qt.io/qt-6/qt-cmake-policy-qtp0001.html [cmake] for policy details. Use the qt_policy command to set the policy and [cmake] suppress this warning. [cmake] [cmake] Call Stack (most recent call first): [cmake] C:/Qt/6.7.0/msvc2019_64/lib/cmake/Qt6Qml/Qt6QmlMacros.cmake:468 (__qt_internal_setup_policy) [cmake] C:/Qt/6.7.0/msvc2019_64/lib/cmake/Qt6Qml/Qt6QmlMacros.cmake:775 (qt6_add_qml_module) [cmake] imports/ComponentBundles/MaterialBundle/CMakeLists.txt:2 (qt_add_qml_module) [cmake] This warning is for project developers. Use -Wno-dev to suppress it. [cmake] [cmake] CMake Warning (dev) at C:/Qt/6.7.0/msvc2019_64/lib/cmake/Qt6Core/Qt6CoreMacros.cmake:3123 (message): [cmake] Qt policy QTP0001 is not set: ':/qt/qml/' is the default resource prefix [cmake] for QML modules. Check https://doc.qt.io/qt-6/qt-cmake-policy-qtp0001.html [cmake] for policy details. Use the qt_policy command to set the policy and [cmake] suppress this warning. [cmake] [cmake] Call Stack (most recent call first): [cmake] C:/Qt/6.7.0/msvc2019_64/lib/cmake/Qt6Qml/Qt6QmlMacros.cmake:468 (__qt_internal_setup_policy) [cmake] C:/Qt/6.7.0/msvc2019_64/lib/cmake/Qt6Qml/Qt6QmlMacros.cmake:775 (qt6_add_qml_module) [cmake] imports/QtQuick/Studio/Application/CMakeLists.txt:8 (qt_add_qml_module) [cmake] This warning is for project developers. Use -Wno-dev to suppress it. [cmake] [cmake] CMake Warning (dev) at C:/Qt/6.7.0/msvc2019_64/lib/cmake/Qt6Core/Qt6CoreMacros.cmake:3123 (message): [cmake] Qt policy QTP0001 is not set: ':/qt/qml/' is the default resource prefix [cmake] for QML modules. Check https://doc.qt.io/qt-6/qt-cmake-policy-qtp0001.html [cmake] for policy details. Use the qt_policy command to set the policy and [cmake] suppress this warning. [cmake] [cmake] Call Stack (most recent call first): [cmake] C:/Qt/6.7.0/msvc2019_64/lib/cmake/Qt6Qml/Qt6QmlMacros.cmake:468 (__qt_internal_setup_policy) [cmake] C:/Qt/6.7.0/msvc2019_64/lib/cmake/Qt6Qml/Qt6QmlMacros.cmake:775 (qt6_add_qml_module) [cmake] imports/QtQuick/Studio/Components/CMakeLists.txt:6 (qt_add_qml_module) [cmake] This warning is for project developers. Use -Wno-dev to suppress it.
- relates to
-
QTBUG-120923
Check metadata and highlighting for 'Data Visualization & 3D' examples (6.7)
-
- Reported
-
| For Gerrit Dashboard: QTBUG-122767 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 543401,4 | Fix QTP0001 warning for Showroom example | dev | qt/qtdoc | Status: MERGED | +2 | 0 |
| 545143,2 | Fix QTP0001 warning for Showroom example | 6.7 | qt/qtdoc | Status: MERGED | +2 | 0 |
| 545230,2 | Fix QTP0001 warning for Showroom example | 6.6 | qt/qtdoc | Status: MERGED | +2 | 0 |