Fix QTP0001 warning for Showroom example

Pick-to: 6.6
Fixes: QTBUG-122767
Change-Id: I65be5eb533364708284e368bef33b7066ecd30d6
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit d3d420a7c095a884efff96a4d93dd6637eba9445)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>